infra/hive/trino/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino
  namespace: hive
spec:
  ports:
    - port: 8080
  selector:
    app: trino
    component: coordinator
